--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ rust_decimal = {git = "https://github.com/julama/rust-decimal", features = ["mat
 [dev-dependencies]
 criterion = "0.3"
 serde_json = "1.0"
-bincode = "1.3.1"
+#bincode = "1.3.1"
 
 [[bench]]
 name = "distance"
