--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ nalgebra-bindings = ["nalgebra"]
 datasets = []
 
 [dependencies]
-ndarray = { version = "0.13", optional = true }
-nalgebra = { version = "0.23.0", optional = true }
+ndarray = { version = "0.13", optional = false }
+nalgebra = { version = "0.23.0", optional = false }
 num-traits = "0.2.12"
 num = "0.3.0"
 rand = "0.7.3"
